# nav2_ws

./: .gitignore  CONTROLLER_DEBUG_GUIDE.md  README.md  ROVER_TROUBLESHOOTING.md  SIX_WHEEL_SETUP.md  six_wheel_rover_standalone.launch.py  test.urdf  test_controllers.sh
src/articubot_one/: package.xml
src/articubot_one/description/: rover.xacro
src/articubot_one/meshes/: left_bogie.STL  right_bogie.STL
src/crab_steering_plugin/: CMakeLists.txt  package.xml
src/crab_steering_plugin/include/: CrabSteeringPlugin.hpp
src/crab_steering_plugin/src/: CrabSteeringPlugin.cpp
src/differential_steering/: CMakeLists.txt  package.xml
src/differential_steering/include/differential_steering/: ackermann_cmd_vel_converter.hpp
src/differential_steering/src/: ackermann_cmd_vel_converter.cpp
src/drive/: CMakeLists.txt  README.md  package.xml  project_memory.txt  rover_controllers.yaml
src/drive/config/: ekf.yaml  slam_params.yaml
src/drive/launch/: README_rover_spawn.md  arohan.launch.py  display.launch.py  gazebo.launch.py  gazebo_diff.launch.py  new_rover_spawn.launch.py  ros2_control.launch.py  rover_complete.launch.py  rover_teleop.launch.py  rover_test.launch.py  slam.launch.py  teleop_only.launch.py
src/drive/models/drive/: CMakeLists.txt  model.config
src/drive/models/drive (1)/: package.xml
src/drive/models/drive (1)/config/: joint_names_drive.yaml
src/drive/models/drive (1)/launch/: display.launch
src/drive/models/drive (1)/meshes/: right_front.STL
src/drive/models/drive (1)/urdf/: drive.csv  drive.urdf
src/drive/models/drive/config/: joint_names_drive.yaml  joint_names_drive3.yaml  rover_controllers.yaml
src/drive/models/drive/launch/: display.launch  gazebo.launch
src/drive/models/drive/meshes/: base.STL  left_front.STL  right_back.STL  rotate_1.STL  rotate_2.STL  rotate_3.STL  rotate_4.STL  rotate_5.STL  rotate_6.STL  steer_4.STL  steer_5.STL  wheel_1.STL  wheel_2.STL  wheel_3.STL  wheel_4.STL  wheel_5.STL  wheel_6.STL
src/drive/models/drive/urdf/: drive.csv  drive.urdf  drive1.urdf  drive2.urdf  drive3.csv  drive_diff.urdf  drive_old.urdf
src/drive/models/drive3/: CMakeLists.txt  package.xml
src/drive/models/drive3/meshes/: steer_1.STL  steer_2.STL  steer_3.STL  steer_6.STL  wheel_2.STL  wheel_4.STL  wheel_6.STL
src/drive/models/drive3/urdf/: drive3.urdf
src/drive/rviz/: urdf_config.rviz
src/drive/scripts/: controller_setup.py  drive_node.py  odometry_publisher.py  rover_controller.py  rover_diagnostics.py  rover_movement_test.py  rover_status_monitor.py  subscriber.cpp  test_differential_steering.py  test_rover_movement.py
src/drive/worlds/: maze.sdf  water.sdf
src/drive_nav2/: CMakeLists.txt  package.xml
src/drive_nav2/config/: rover_controllers.yaml
src/drive_nav2/launch/: complete_navigation.launch.py  display.launch.py  test.launch.py
src/drive_nav2/meshes/: left_back.STL
src/drive_nav2/urdf/: drive.urdf
src/drive_nav2/worlds/: maze.sdf
src/final/launch/: arohan.launch.py
src/hardware_plugin/: CMakeLists.txt  hardware_plugin.xml  package.xml
src/hardware_plugin/include/hardware_plugin/: hardware_plugin.hpp
src/hardware_plugin/src/: hardware_plugin.cpp
src/nav2_bringup/: package.xml  setup.py
src/nav2_bringup/config/: nav2_params.yaml
src/nav2_bringup/launch/: gazebo_nav2.launch.py  nav2.launch.py  nav2_with_gazebo.launch.py
src/nav2_bringup/rviz/: nav2_default_view.rviz
src/sam_bot_nav2_gz/launch/: display.launch.py
src/sam_bot_nav2_gz/src/description/: sam_bot_description.urdf
