<?xml version="1.0"?>
<package format="3">
  <name>drive</name>
  <version>1.0.0</version>
  <description>
    URDF Description package for drive robot.
    This package contains configuration data, 3D models, and launch files for the drive robot.
  </description>
  
  <maintainer email="TODO@email.com">
    TODO
  </maintainer>
  
  <license>BSD</license>

  <!-- Build tool dependency for ROS 2 -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <!-- Dependencies -->
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz2</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo_ros</depend>

<exec_depend>ros_ign_gazebo</exec_depend>
<exec_depend>ign_gazebo</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <architecture_independent/>
  </export>
</package>

