<?xml version="1.0"?>
<package format="3">
  <name>drive</name>
  <version>1.0.0</version>
  <description>
    URDF and simulation package for the crab-steering rover robot.
    Includes configuration, models, ROS 2 control, bridges, and launch files.
  </description>

  <maintainer email="kush@example.com">Kush</maintainer>
  <license>BSD</license>

  <!-- Build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Build and exec dependencies -->
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>xacro</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>controller_manager</depend>
  <depend>ros2_control</depend>
  <depend>velocity_controllers</depend>
  <depend>position_controllers</depend>
  <depend>ros_gz_sim</depend>
  <depend>ros_gz_bridge</depend>
  <depend>ros_gz_interfaces</depend>

  <!-- Visualization -->
  <depend>rviz2</depend>

  <!-- Simulation -->
  <exec_depend>gazebo_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <architecture_independent/>
  </export>
</package>
