<?xml version="1.0"?>
<package format="3">
  <name>drive</name>
  <version>1.0.0</version>
  <description>
    URDF Description package for drive robot.
    This package contains configuration data, 3D models, and launch files for the drive robot.
  </description>
  
  <maintainer email="TODO@email.com">
    TODO
  </maintainer>
  
  <license>BSD</license>

  <!-- Build tool dependency for ROS 2 -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <!-- Dependencies -->
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz2</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo_ros</depend>
  <depend>ros2_control</depend>
  <depend>controller_manager</depend>
  <depend>velocity_controllers</depend>
  <depend>position_controllers</depend>
  <depend>differential_steering</depend>
  
  <!-- Teleop dependencies -->
  <depend>teleop_twist_keyboard</depend>
  <depend>teleop_twist_joy</depend>
  <depend>teleop_tools</depend>
  
  <!-- Gazebo dependencies -->
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ign_ros2_control</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <architecture_independent/>
  </export>
</package>